@@ -11,7 +11,34 @@
 <div class="document" id="recent-changes-for-wxpython">
 <h1 class="title">Recent Changes for wxPython</h1>
 <div class="section">
-<h1><a id="id1" name="id1">2.8.6.0</a></h1>
+<h1><a id="id1" name="id1">2.8.6.1</a></h1>
+<ul class="simple">
+<li>26-Oct-2007</li>
+</ul>
+<p>wxMac: Fixed paste bug when the clipboard contains unicode text.</p>
+<p>AUI: Added missing event binders for the notebok tab events.</p>
+<p>wxMac: Fixed bug that resulted in portions of virtual listctrl's to
+not be repainted when scrolling with PgUp/PgDown/Home/End.</p>
+<p>wxMac: Fixed bug that broke tab traversal when tabbing runs into a
+wx.StaticBox.</p>
+<p>wxGTK:  Add wx.Window.GetGtkWidget.</p>
+<p>All: Undprecated wx.ListCtrl.[G|S]etItemSpacing</p>
+<p>All: Fixed wx.Palette constructor wrapper.  It takes three seqences of
+integers to specify the R, G, and B values for each color in the
+palette, which must all be the same length and which must contain
+integer values in the range of 0..255 inclusive.</p>
+<p>Thanks to some grunt work from Edouard TISSERANT, wxPython now has the
+needed tweaks in config.py to be able to be built with mingw32.  See
+BUILD.txt for details.</p>
+<p>Changes in wx.GraphicsContext to make things like the half-pixel
+offsets more consistent across platforms.</p>
+<p>wxMSW: If freezing a top-level window wxWidgets will actually freeze
+the TLW's children instead.  This works around a feature of MS Windows
+that allowed windows beneath the frozen one in Z-order to paint
+through, and also mouse events clicking through to the lower window.</p>
+</div>
+<div class="section">
+<h1><a id="id2" name="id2">2.8.6.0</a></h1>
 <ul class="simple">
 <li>27-Sept-2007</li>
 </ul>
@@ -37,7 +64,7 @@ wx.ListBox.  Since there were not any more available bits for border
 styles, this style replaces wx.BORDER_DOUBLE.</p>
 </div>
 <div class="section">
-<h1><a id="id2" name="id2">2.8.4.2</a></h1>
+<h1><a id="id3" name="id3">2.8.4.2</a></h1>
 <ul class="simple">
 <li>8-Aug-2007</li>
 </ul>
@@ -70,7 +97,7 @@ Installer for OS X.  There is no longer any need for separate builds
 for each OS version, all builds are now Universal and work on both
 Panther and Tiger, and on PPC and i386.</p>
 <p>On the Linux side the debian and ubuntu packages will support multiple
-versions of Python if the Debian/Ubuntu release is setup to support
+versions of Python if the Debian/Ubuntu release is set up to support
 more than one version.  To check which versions you can expect to get
 you can run &quot;pyversions -s&quot;.  Also there is a new package available
 that contains a debug version of the wxPython extension modules, that
@@ -78,7 +105,7 @@ can be used with the python-dbg package.  In addition the RPMs are now
 being built for Fedora Core 6 and Fedora Core 7.</p>
 </div>
 <div class="section">
-<h1><a id="id3" name="id3">2.8.4.0</a></h1>
+<h1><a id="id4" name="id4">2.8.4.0</a></h1>
 <ul class="simple">
 <li>14-May-2007</li>
 </ul>
@@ -152,7 +179,7 @@ menubars, and also creating attributes for menus, menubars and menu
 items.</p>
 </div>
 <div class="section">
-<h1><a id="id4" name="id4">2.8.3.0</a></h1>
+<h1><a id="id5" name="id5">2.8.3.0</a></h1>
 <ul class="simple">
 <li>22-March-2007</li>
 </ul>
@@ -232,7 +259,7 @@ main window.</li>
 </blockquote>
 </div>
 <div class="section">
-<h1><a id="id5" name="id5">2.8.1.1</a></h1>
+<h1><a id="id6" name="id6">2.8.1.1</a></h1>
 <ul class="simple">
 <li>19-Jan-2007</li>
 </ul>
@@ -262,7 +289,7 @@ StyledTextCtrl (such as in PyShell) are now top-level float-on-parent
 windows so they are no longer clipped by the bounds of the stc window.</p>
 </div>
 <div class="section">
-<h1><a id="id6" name="id6">2.8.1.0</a></h1>
+<h1><a id="id7" name="id7">2.8.1.0</a></h1>
 <ul class="simple">
 <li>8-Jan-2007</li>
 </ul>
@@ -284,7 +311,7 @@ essentially implement the MDI interface using a normal wx.Frame and a
 wx.aui.AuiNotebook.</p>
 </div>
 <div class="section">
-<h1><a id="id7" name="id7">2.8.0.1</a></h1>
+<h1><a id="id8" name="id8">2.8.0.1</a></h1>
 <ul class="simple">
 <li>11-Dec-2006</li>
 </ul>
@@ -334,7 +361,7 @@ introduce native search widgets.</p>
 uses the native renderer to draw the button.</p>
 </div>
 <div class="section">
-<h1><a id="id8" name="id8">2.7.2.0</a></h1>
+<h1><a id="id9" name="id9">2.7.2.0</a></h1>
 <ul class="simple">
 <li>7-Nov-2006</li>
 </ul>
@@ -374,7 +401,7 @@ constructor to use it instead of the default ActiveMovie backend,
 (assuming the quicktime DLLs are available on the system.)</p>
 </div>
 <div class="section">
-<h1><a id="id9" name="id9">2.7.1.3</a></h1>
+<h1><a id="id10" name="id10">2.7.1.3</a></h1>
 <ul class="simple">
 <li>26-Oct-2006</li>
 </ul>
@@ -394,7 +421,7 @@ SystemOption to zero.  In a future release this will be the default.</p>
 the new wx.GraphicsContext and wx.GraphicsPath classes.</p>
 </div>
 <div class="section">
-<h1><a id="id10" name="id10">2.7.1.2</a></h1>
+<h1><a id="id11" name="id11">2.7.1.2</a></h1>
 <ul class="simple">
 <li>21-Oct-2006</li>
 </ul>
@@ -421,7 +448,7 @@ correctly with this.</li>
 <p>Fixed refcount leak in wx.Window.GetChildren.</p>
 </div>
 <div class="section">
-<h1><a id="id11" name="id11">2.7.1.1</a></h1>
+<h1><a id="id12" name="id12">2.7.1.1</a></h1>
 <ul class="simple">
 <li>18-Oct-2006</li>
 </ul>
@@ -684,7 +711,7 @@ wx.PaintDC or wx.BufferedPaintDC.  This uses the new
 wx.Window.IsDoubleBuffered method.</p>
 </div>
 <div class="section">
-<h1><a id="id12" name="id12">2.6.3.3</a></h1>
+<h1><a id="id13" name="id13">2.6.3.3</a></h1>
 <ul class="simple">
 <li>15-July-2006</li>
 </ul>
@@ -721,7 +748,7 @@ machines, but at least all compile errors and warnings related to it
 have been resolved.</p>
 </div>
 <div class="section">
-<h1><a id="id13" name="id13">2.6.3.2</a></h1>
+<h1><a id="id14" name="id14">2.6.3.2</a></h1>
 <ul class="simple">
 <li>3-April-2006</li>
 </ul>
@@ -755,7 +782,7 @@ already shown.</p>
 is selected only with the keyboard.</p>
 </div>
 <div class="section">
-<h1><a id="id14" name="id14">2.6.3.0</a></h1>
+<h1><a id="id15" name="id15">2.6.3.0</a></h1>
 <ul class="simple">
 <li>27-March-2006</li>
 </ul>
@@ -817,7 +844,7 @@ zoomed plot and move it around with a mouse drag.</p>
 <p>Added wx.StandardPaths.GetDocumentsDir() (patch 1214360)</p>
 </div>
 <div class="section">
-<h1><a id="id15" name="id15">2.6.2.1</a></h1>
+<h1><a id="id16" name="id16">2.6.2.1</a></h1>
 <ul class="simple">
 <li>10-Jan-2006</li>
 </ul>
@@ -986,7 +1013,7 @@ be easy to accommodate, all you need to do is add a parenthesis
 pair:  (...x, y, ...) ---&gt;  (...(x,y), ...)</blockquote>
 </div>
 <div class="section">
-<h1><a id="id16" name="id16">2.6.1.0</a></h1>
+<h1><a id="id17" name="id17">2.6.1.0</a></h1>
 <ul class="simple">
 <li>4-June-2005</li>
 </ul>
@@ -1014,7 +1041,7 @@ calls.</p>
 change will get written at the next flush.</p>
 </div>
 <div class="section">
-<h1><a id="id17" name="id17">2.6.0.1</a></h1>
+<h1><a id="id18" name="id18">2.6.0.1</a></h1>
 <ul class="simple">
 <li>30-May-2005</li>
 </ul>
@@ -1127,7 +1154,7 @@ there is a range of allowed values (so a wx.SpinCtrl is used instead
 of a wx.TextCtrl.)</p>
 </div>
 <div class="section">
-<h1><a id="id18" name="id18">2.6.0.0</a></h1>
+<h1><a id="id19" name="id19">2.6.0.0</a></h1>
 <ul class="simple">
 <li>26-Apr-2005</li>
 </ul>
@@ -1205,7 +1232,7 @@ EVT_KEY_UP and EVT_TEXT events from its embedded text control.</p>
 </dl>
 </div>
 <div class="section">
-<h1><a id="id19" name="id19">2.5.5.1</a></h1>
+<h1><a id="id20" name="id20">2.5.5.1</a></h1>
 <ul class="simple">
 <li>8-Apr-2005</li>
 </ul>
@@ -1274,7 +1301,7 @@ folks.</p>
 <p>Added the ActiveGrid IDE as a sample application.</p>
 </div>
 <div class="section">
-<h1><a id="id20" name="id20">2.5.4.1</a></h1>
+<h1><a id="id21" name="id21">2.5.4.1</a></h1>
 <ul class="simple">
 <li>16-Mar-2005</li>
 </ul>
@@ -1508,7 +1535,7 @@ wx.Image.</p>
 </dl>
 </div>
 <div class="section">
-<h1><a id="id21" name="id21">2.5.3.1</a></h1>
+<h1><a id="id22" name="id22">2.5.3.1</a></h1>
 <ul class="simple">
 <li>9-Nov-2004</li>
 </ul>
@@ -1665,7 +1692,7 @@ it.</p>
 version installs, and comes with an uninstaller script.</p>
 </div>
 <div class="section">
-<h1><a id="id22" name="id22">2.5.2.8</a></h1>
+<h1><a id="id23" name="id23">2.5.2.8</a></h1>
 <ul class="simple">
 <li>27-Aug-2004</li>
 </ul>
@@ -1697,7 +1724,7 @@ wxCheckListBox.</li>
 </blockquote>
 </div>
 <div class="section">
-<h1><a id="id23" name="id23">2.5.2.7</a></h1>
+<h1><a id="id24" name="id24">2.5.2.7</a></h1>
 <ul class="simple">
 <li>14-Aug-2004</li>
 </ul>
@@ -1881,7 +1908,7 @@ MigrationGuide for more details on using the new module.</p>
 <p>Floats are allowed again as function parameters where ints are expected.</p>
 </div>
 <div class="section">
-<h1><a id="id25" name="id25">2.4.2.4</a></h1>
+<h1><a id="id26" name="id26">2.4.2.4</a></h1>
 <ul class="simple">
 <li>1-Oct-2003</li>
 </ul>
@@ -1894,7 +1921,7 @@ demonstrated in the Threads sample in the demo.</p>
 <p>Added Chris Barker's FloatCanvas.</p>
 </div>
 <div class="section">
-<h1><a id="id26" name="id26">2.4.1.2</a></h1>
+<h1><a id="id27" name="id27">2.4.1.2</a></h1>
 <ul class="simple">
 <li>19-Jun-2003</li>
 </ul>
@@ -1949,7 +1976,7 @@ and Spacers can be specified with a wxSize (or 2-tuple) parameter</p>
 <p>Added wxCursorFromBits.</p>
 </div>
 <div class="section">
-<h1><a id="id27" name="id27">2.4.0.7</a></h1>
+<h1><a id="id28" name="id28">2.4.0.7</a></h1>
 <ul class="simple">
 <li>24-Mar-2003</li>
 </ul>
@@ -1989,7 +2016,7 @@ think I am testing in the future...</p>
 <p>Updated to 0.9b of PyCrust.</p>
 </div>
 <div class="section">
-<h1><a id="id28" name="id28">2.4.0.4</a></h1>
+<h1><a id="id29" name="id29">2.4.0.4</a></h1>
 <ul class="simple">
 <li>7-Mar-2003</li>
 </ul>
@@ -2050,7 +2077,7 @@ doesn't have a standard place for them.</p>
 <p>Updated to the 0.9a version of PyCrust</p>
 </div>
 <div class="section">
-<h1><a id="id29" name="id29">2.4.0.2</a></h1>
+<h1><a id="id30" name="id30">2.4.0.2</a></h1>
 <ul class="simple">
 <li>23-Jan-2003</li>
 </ul>
@@ -2059,7 +2086,7 @@ doesn't have a standard place for them.</p>
 <p>Added wxPyColourChooser by Michael Gilfix.</p>
 </div>
 <div class="section">
-<h1><a id="id30" name="id30">2.4.0.1</a></h1>
+<h1><a id="id31" name="id31">2.4.0.1</a></h1>
 <ul class="simple">
 <li>10-Jan-2003</li>
 </ul>
@@ -2069,14 +2096,14 @@ enhancements.</p>
 wxPython/lib/dialogs.py for more details.</p>
 </div>
 <div class="section">
-<h1><a id="id31" name="id31">2.3.4.2</a></h1>
+<h1><a id="id32" name="id32">2.3.4.2</a></h1>
 <ul class="simple">
 <li>21-Dec-2002</li>
 </ul>
 <p>Various bug fixes.</p>
 </div>
 <div class="section">
-<h1><a id="id32" name="id32">2.3.4.1</a></h1>
+<h1><a id="id33" name="id33">2.3.4.1</a></h1>
 <ul class="simple">
 <li>18-Dec-2002</li>
 </ul>
@@ -2134,7 +2161,7 @@ HTMLHelp viewer does.  Changed how the wxPythonDocs tarball is built
 and added a script to launch the doc viewer.</p>
 </div>
 <div class="section">
-<h1><a id="id33" name="id33">2.3.3.1</a></h1>
+<h1><a id="id34" name="id34">2.3.3.1</a></h1>
 <ul class="simple">
 <li>19-Sep-2002</li>
 </ul>
@@ -2280,7 +2307,7 @@ example.</p>
 <p>Added wxTimeCtrl from Will Sadkin.</p>
 </div>
 <div class="section">
-<h1><a id="id34" name="id34">2.3.2.1</a></h1>
+<h1><a id="id35" name="id35">2.3.2.1</a></h1>
 <ul class="simple">
 <li>20-Dec-2001</li>
 </ul>
@@ -2290,7 +2317,7 @@ without barfing and is also still compatible with Python debuggers.</p>
 <p>Added some patches from library contributors.</p>
 </div>
 <div class="section">
-<h1><a id="id35" name="id35">2.3.2</a></h1>
+<h1><a id="id36" name="id36">2.3.2</a></h1>
 <ul class="simple">
 <li>11-Dec-2001</li>
 </ul>
@@ -2376,7 +2403,7 @@ wxPython/contrib/dllwidget and wxPython/demo/dllwidget for more
 details.</p>
 </div>
 <div class="section">
-<h1><a id="id36" name="id36">2.3.1</a></h1>
+<h1><a id="id37" name="id37">2.3.1</a></h1>
 <ul class="simple">
 <li>10-Jul-2001</li>
 </ul>
@@ -2393,7 +2420,7 @@ subclass wxXmlResourceHandler, etc...</p>
 <p>Added enhanced wxVTKRenderWindow by Prabhu Ramachandran</p>
 </div>
 <div class="section">
-<h1><a id="id37" name="id37">2.3.0</a></h1>
+<h1><a id="id38" name="id38">2.3.0</a></h1>
 <ul class="simple">
 <li>22-May-2001</li>
 </ul>
@@ -2493,7 +2520,7 @@ by having smaller functional apps to play with.  They can be found in
 wxPython/samples.</p>
 </div>
 <div class="section">
-<h1><a id="id38" name="id38">2.2.7</a></h1>
+<h1><a id="id39" name="id39">2.2.7</a></h1>
 <ul class="simple">
 <li>19-Jun-2001</li>
 </ul>
@@ -2501,7 +2528,7 @@ wxPython/samples.</p>
 changes and fixes in the wxWindows library.</p>
 </div>
 <div class="section">
-<h1><a id="id39" name="id39">2.2.5</a></h1>
+<h1><a id="id40" name="id40">2.2.5</a></h1>
 <ul class="simple">
 <li>30-Jan-2001</li>
 </ul>
